--- a/styles/style.css
+++ b/styles/style.css
@@ -4,48 +4,38 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.header__img {
   width: 100%;
 }
-.aaa .more_inf {
+.header__info {
   font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
-  .aaa { 
+  .header { 
     text-align: center;
   }
 }
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1;
-}
-.task-row-wrapper {
-  display: flex;
-}
-ul {
+.list {
   margin: 0;
   padding: 0px;
 }
-li, h3 {
+.list li{
   list-style: none;
 }
-input,button{
-  outline: none;
-}
-button {
+
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -54,12 +44,11 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.button:hover {
   color: #3a3A3a;
 }
 /* Heading */
-h3,
-label[for = 'new-task'] {
+.section__header {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -68,7 +57,7 @@ label[for = 'new-task'] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.text-input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -79,22 +68,25 @@ input[type="text"] {
   border-radius: 6px;
   font-family: Lato, sans-serif;
   color: #888;
+  display: none;
 }
-input[type="text"]:focus {
+.text-input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for = 'new-task'] {
-  display: block;
-  margin: 0 0 20px;
+.add-task__input {
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1;
 }
-input#new-task {
-  width: 318px;
+.add-task__container {
+  margin-top: 20px;
+  display: flex;
 }
 
 /* Task list */
-li {
+.list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -102,47 +94,38 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
-  vertical-align: middle;
-}
 
-li > input[type="checkbox"] {
+.list__checkbox {
   margin: 0 10px;
 }
-li > label {
+.item__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li > input[type = "text"] {
-  width: 226px;
-}
-button.delete img {
+
+.button_delete__image {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.button_delete__image:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.completed__list .item__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
-  display: none;
-}
-
-ul li.editMode input[type=text] {
+.editMode .text-input{
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+.editMode .item__label {
   display: none;
 }
